# rust_d3d12

./: Cargo.toml  README.md  TODO.md  build.rs
d3d12_utils/: Cargo.toml
d3d12_utils/src/: command_queue.rs  d3d12_helpers.rs  descriptor_heap.rs  descriptor_manager.rs  heap.rs  helpers.rs  lib.rs  mesh_manager.rs  resource.rs  texture.rs  texture_manager.rs  upload_ring_buffer.rs
renderer/: Cargo.toml  build.rs
renderer/src/: main.rs  object.rs  render_pass.rs  renderer.rs
renderer/src/render_pass/: bindless_texture_pass.rs
renderer/src/shaders/: bindless_texture.hlsl  triangle.hlsl
src/: main.rs  parse_obj.rs  renderer.rs
src/shaders/: triangle.hlsl
